@@ -1,2 +1,0 @@
-config.save
-sqlnet.log
